--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
     "@types/mysql": "^2.15.18"
   }
