--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "\"Backend para clase martes y viernes\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"set NODE_ENV=development&& node dist",
+    "prd": "set NODE_ENV=production&& node dist"
   },
   "author": "\"Gustavo G\"",
   "license": "ISC",
@@ -12,11 +14,13 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.6.0",
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
     "@types/express-fileupload": "^1.1.6",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mysql": "^2.15.18",
+    "@types/nodemailer": "^6.4.1",
     "@types/uniqid": "^5.3.0"
   }
 }
