--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"set NODE_ENV=development&&tsc&& nodemon node dist",
+    "dev": "set NODE_ENV=development&&tsc&& nodemon node dist",
     "prd": "set NODE_ENV=production&&tsc&& nodemon node dist"
   },
   "author": "\"Gustavo G\"",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
     "@types/jsonwebtoken": "^8.5.1",
